--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -70,7 +70,7 @@
 	</table>
 </div>
 
-<div id="export-profile-dialog" class="modal hide fade" tabindex="-1" data-urldelete="@Url.Action("Delete")" data-profile="@T("Common.Profile")">
+<div id="export-profile-dialog" class="modal modal-large hide fade" tabindex="-1" data-urldelete="@Url.Action("Delete")" data-profile="@T("Common.Profile")">
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal"><b>x</b></button>
 		<h4 class="caption"></h4>
