Getting started with export profile task

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -612,6 +612,7 @@ label.forcheckbox {
 		img {
 		    max-height: 32px;
 			max-width: 120px;
+			margin-right: 5px;
 		    vertical-align: top;
 		}
 		
