Changed documentation links

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
@@ -10,8 +10,8 @@
 	string currentLanguageCode = currentLanguage.UniqueSeoCode.EmptyNull().ToLower();
 	string communityUrl = (currentLanguageCode == "de" ? 
 		"http://community.smartstore.com" :
-		"http://community.smartstore.com/index.php?/&k=880ea6a14ea49e853634fbdc5015a024&setlanguage=1&cal_id=&langid=1");
-	string docsUrl = "https://smartstore.atlassian.net/wiki/x/CAAk";
+        "http://community.smartstore.com/index.php?/&k=880ea6a14ea49e853634fbdc5015a024&setlanguage=1&cal_id=&langid=1");
+    string docsUrl = "http://docs.smartstore.com/display/SD/SmartStore.NET+Documentation+Home";
 	var checkUpdateResult = ViewBag.CheckUpdateResult as CheckUpdateResult;
 }
 
