Fixes #745: ImageGallery doesn't close properly when a variant has been chosen before

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1462,3 +1462,11 @@ table.payment-method-features td {
     border: 0;
     border-bottom: 1px solid #e5e5e5;
 }
+
+
+/* Download editor
+-------------------------------------------------------------- */
+
+.download-editor {
+
+}
