New Download Editor Template: Finished missing parts

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1468,5 +1468,17 @@ table.payment-method-features td {
 -------------------------------------------------------------- */
 
 .download-editor {
+	.panel-switcher-icon { 
+		width: 13px; 
+	}
 
+	.filename {
+		line-height: 32px; 
+		vertical-align: middle; 
+		padding-right: 10px; 
+		font-weight: bold;
+		max-width: 300px;
+		display: inline-block;
+		.ellipsis();
+	}
 }
