--- a/src/Presentation/SmartStore.Web/Content/jquery.pnotify.default.css
+++ b/src/Presentation/SmartStore.Web/Content/jquery.pnotify.default.css
@@ -140,6 +140,9 @@ margin: 0;
 .ui-pnotify .ui-pnotify-text {
 	padding-top: 10px;
 	padding-bottom: 10px;
+	max-height: 500px;
+	overflow: auto;
+	position: relative;
 }
 
 .ui-pnotify-closer, 
