New export segmenter

--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
@@ -91,10 +91,10 @@
 		</tr>
 		<tr>
 			<td class="adminTitle">
-				@Html.SmartLabelFor(x => x.Provider.FileType)
+				@Html.SmartLabelFor(x => x.Provider.FileExtension)
 			</td>
 			<td class="adminData">
-				@Html.DisplayFor(x => x.Provider.FileType)
+				@Html.DisplayFor(x => x.Provider.FileExtension)
 			</td>
 		</tr>
 		<tr>
