Two more options to handle customer numbers: display customer number in frontend & let customers enter their customer number if it's still empty

--- a/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
@@ -201,16 +201,19 @@
             </tr>
         }
         
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.CustomerNumber)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => model.CustomerNumber)
-                @Html.ValidationMessageFor(model => model.CustomerNumber)
-            </td>
-        </tr>
-
+        @if (Model.CustomerNumberEnabled)
+        {
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.CustomerNumber)
+                </td>
+                <td class="adminData">
+                    @Html.EditorFor(model => model.CustomerNumber)
+                    @Html.ValidationMessageFor(model => model.CustomerNumber)
+                </td>
+            </tr>
+        }
+        
         @if (Model.StreetAddressEnabled)
         {
             <tr>
