--- a/src/Presentation/SmartStore.Web/Views/Customer/Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Info.cshtml
@@ -134,12 +134,15 @@
                     </div>
                 }
                 
-                <div class="control-group">
-                    @Html.LabelFor(model => model.CustomerNumber, new { @class = "control-label", @for = "CustomerNumber" })
-                    <div class="controls">
-                        @Html.TextBoxFor(model => model.CustomerNumber, !Model.CustomerNumberEnabled ? new { @readonly = "true" } : null)
+                @if(Model.DisplayCustomerNumber)
+                {
+                    <div class="control-group">
+                        @Html.LabelFor(model => model.CustomerNumber, new { @class = "control-label", @for = "CustomerNumber" })
+                        <div class="controls">
+                            @Html.TextBoxFor(model => model.CustomerNumber, !Model.CustomerNumberEnabled ? new { @readonly = "true" } : null)
+                        </div>
                     </div>
-                </div>
+                }
                 
            </fieldset>
             
