--- a/src/Presentation/SmartStore.Web/Administration/Views/ScheduleTask/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ScheduleTask/List.cshtml
@@ -14,6 +14,42 @@
     </div>
 </div>
 
+
+
+
+@{Html.SmartStore().Window()
+	.Name("cron-schedule-window")
+	.Title("Cron Ausdruck bearbeiten")
+	.ShowClose(true)
+	//.LoadContentFrom(Url.Action("CronSchedule"))
+	.FooterContent(@<text>
+		<button class="btn btn-primary" data-dismiss="modal">@T("Common.Save")</button>
+		<btn class="btn btn-link" data-dismiss="modal" aria-hidden="true">@T("Common.Cancel")</btn>
+	</text>)
+	.Width(600)
+	//.Height(500)
+	.Modal(true)
+	.Visible(false)
+	.Render();
+}
+
+<a href='@Url.Action("CronSchedule")' data-toggle='modal' data-target='#cron-schedule-window' class='btn' id='cron-schedule' style="margin-bottom: 30px">
+	CronSchedule
+</a>
+
+<script>
+	$(function () {
+		$(document).on("hidden.bs.modal", "#cron-schedule-window", function (e) {
+			$(e.target).removeData("modal").find(".modal-body").empty();
+		});
+	});
+</script>
+
+
+
+
+
+
 <table class="adminContent">
     <tr>
         <td>
@@ -26,8 +62,10 @@
                     .Columns(columns =>
                     {
                         columns.Bound(x => x.Name).ClientTemplate("<strong><#= Name #></strong>");
-                        columns.Bound(x => x.Seconds)
-							.ClientTemplate("<#= PrettySeconds #>");
+						//columns.Bound(x => x.Seconds)
+						//	.ClientTemplate("<#= PrettySeconds #>");
+						columns.Bound(x => x.CronExpression)
+							.ClientTemplate("<a href='<#= EditUrl #>' data-toggle='modal' data-target='#cron-schedule-window'><#= CronExpression #></a> (<#= CronDescription #>)");
                         columns.Bound(x => x.Enabled)
                             .ClientTemplate(@Html.SymbolForBool("Enabled"))
                             .Centered()
