Export test, create zip archive

--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/CreateDeployment.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/CreateDeployment.cshtml
@@ -18,5 +18,5 @@
 			<button type="submit" name="save" value="save-continue" class="btn">@T("Admin.Common.SaveContinue")</button>
 		</div>
 	</div>
-	@Html.Partial("_CreateOrUpdateDeployment", Model)
+	@Html.Partial("_CreateOrUpdate.Deployment", Model)
 }
