--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/GeneralCommon.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/GeneralCommon.cshtml
@@ -176,6 +176,15 @@
 				@Html.ValidationMessageFor(model => model.SeoSettings.CanonicalHostNameRule)
 			</td>
 		</tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.SeoSettings.ExtraRobotsDisallows)
+            </td>
+            <td class="adminData">
+                @Html.TextAreaFor(model => model.SeoSettings.ExtraRobotsDisallows, new { @class = "input-large", style = "height:250px" })
+                @Html.ValidationMessageFor(model => model.SeoSettings.ExtraRobotsDisallows)
+            </td>
+        </tr>
     </table>
 }
 @helper TabSecuritySettings()
